--- a/data-features/realtime-air-quality/index.html
+++ b/data-features/realtime-air-quality/index.html
@@ -442,7 +442,7 @@
                 <div class="col-md-4">
                     <div class="fs-sm asidebox">
                         <h4>About the data</h4>
-                        <p>Data are hourly measurements of PM2.5, in micrograms per cubic meter of air (µg/m<sup>3</sup>). External factors can sometimes affect monitor functioning. Data are preliminary and subject to change.</p>
+                        <p>Data are hourly measurements of PM2.5, in micrograms per cubic meter of air (µg/m<sup>3</sup>). External factors can sometimes affect monitor functioning. Data are preliminary and subject to change. Times are in EST.</p>
             
                         <strong>Street-level monitors</strong>
                         <p>Data come from the <a href="../nyccas">NYC Community Air Survey</a>'s street-level monitors, which measure ground-level exposures. We apply a calibration factor to make our data comparable to DEC data and historical EPA data.</p>
