--- a/content/data-features/nyccas/embed/pollutant-trends.html
+++ b/content/data-features/nyccas/embed/pollutant-trends.html
@@ -233,7 +233,7 @@
             console.log('*****METADATA*****')
             console.log('pollutant: ' + pollutant)
             console.log('sources: ' + sources)
-            console.log('source: ' + source)
+            // console.log('source: ' + source)
             console.log('units: ' + units)
         }
 
