Build bec5800e77 (Merge pull request #1091 from nychealth/feature-add-new-rat-indicators)

--- a/neighborhood-reports/housing_and_health/index.html
+++ b/neighborhood-reports/housing_and_health/index.html
@@ -651,11 +651,10 @@
     </h2>
 
     <h1 class="d-none">
-        Heat stress: hospitalizations
+        Heat stress: yearly hospitalizations
     </h1>
     <h2 class="d-none">
-        Heat stress hospitalizations due to heat-related illnesses, such as heat stroke and heat exhaustion, represent part of the public health burden of hot weather. Data aggregated over five years provides enough stability to display neighborhood impacts.
-
+        Heat stress hospitalizations weather are part of the public health burden due to hot weather.
     </h2>
 
     <h1 class="d-none">
