--- a/data-explorer/weather-related-illness/index.html
+++ b/data-explorer/weather-related-illness/index.html
@@ -1826,7 +1826,7 @@
         <h1
             id="IndicatorID-2075"
             class="d-none">
-            Heat stress: emergency department visits
+            Heat stress: yearly emergency department visits
         </h1>
         <h2
             class="d-none">
@@ -1841,12 +1841,11 @@
         <h1
             id="IndicatorID-2076"
             class="d-none">
-            Heat stress: hospitalizations
+            Heat stress: yearly hospitalizations
         </h1>
         <h2
             class="d-none">
-            Heat stress hospitalizations due to heat-related illnesses, such as heat stroke and heat exhaustion, represent part of the public health burden of hot weather. Data aggregated over five years provides enough stability to display neighborhood impacts.
-
+            Heat stress hospitalizations weather are part of the public health burden due to hot weather.
         </h2>
 
 
