--- a/neighborhood-reports/fresh_meadows/housing_and_health/index.html
+++ b/neighborhood-reports/fresh_meadows/housing_and_health/index.html
@@ -622,12 +622,12 @@
     <div class="row align-items-center d-print-none">
         <div class="col-6 col-md-5">
             <span class="indicator-short-name">Heat hospitalizations</span>
-            <div class="print-only">Heat stress: hospitalizations, 2015</div>
+            <div class="print-only">Heat stress: yearly hospitalizations, 2016</div>
         </div>
         <div class="col-6 col-md-4 topic-list">
-            <img src="https://raw.githubusercontent.com/nychealth/EHDP-data/production/neighborhood-reports/images/Heat540_406.svg" alt="Visualization showing neighborhood rank of 41 out of 42 for Heat hospitalizations in Fresh Meadows." width="100%" class="viz d-md-none mb-1"><span class="better">Better</span></div>
+            <img src="https://raw.githubusercontent.com/nychealth/EHDP-data/production/neighborhood-reports/images/Heat540_406.svg" alt="Visualization showing neighborhood rank of 35 out of 42 for Heat hospitalizations in Fresh Meadows." width="100%" class="viz d-md-none mb-1"><span class="better">Better</span></div>
         <div class="d-none d-md-inline col-md-3">
-            <img src="https://raw.githubusercontent.com/nychealth/EHDP-data/production/neighborhood-reports/images/Heat540_406.svg" alt="Visualization showing neighborhood rank of 41 out of 42 for Heat hospitalizations in Fresh Meadows." class="viz">
+            <img src="https://raw.githubusercontent.com/nychealth/EHDP-data/production/neighborhood-reports/images/Heat540_406.svg" alt="Visualization showing neighborhood rank of 35 out of 42 for Heat hospitalizations in Fresh Meadows." class="viz">
         </div>
     </div>
 
@@ -635,17 +635,17 @@
     <div class="print-only row">
         <div class="col-4 small border-right">
             <span class="indicator-short-name">Heat hospitalizations</span>
-            <div style="font-size: 12px;">Heat stress: hospitalizations, 2015</div>
+            <div style="font-size: 12px;">Heat stress: yearly hospitalizations, 2016</div>
         </div>
         <div class="col-3 topic-list">
-            <img src="https://raw.githubusercontent.com/nychealth/EHDP-data/production/neighborhood-reports/images/Heat540_406.svg" alt="Visualization showing neighborhood rank of 41 out of 42 for Heat hospitalizations in Fresh Meadows." width="100%" class="viz d-md-none mb-1"><span class="better">Better</span></div>
+            <img src="https://raw.githubusercontent.com/nychealth/EHDP-data/production/neighborhood-reports/images/Heat540_406.svg" alt="Visualization showing neighborhood rank of 35 out of 42 for Heat hospitalizations in Fresh Meadows." width="100%" class="viz d-md-none mb-1"><span class="better">Better</span></div>
         <div class="col-5 border-left">
             <div class="comparison">
                 <div class="row">
                     <div class="col">
-                        Fresh Meadows: <span class="float-right">0.0*</span><br>
-                        Queens: <span class="float-right">0.5</span><br>
-                        New York City: <span class="float-right">0.8</span>
+                        Fresh Meadows: <span class="float-right">0.5*</span><br>
+                        Queens: <span class="float-right">1.2</span><br>
+                        New York City: <span class="float-right">1.6</span>
                      </div>
 
                 </div>
@@ -679,14 +679,13 @@
             </div>
 
             <div class="modal-body">
-                <h2 class="fs-xl" data-pagefind-ignore="all">Heat stress: hospitalizations <span class="font-weight-normal">(<span id="year-heat-hospitalizations">YEAR</span>)</span></h2>
-                <p>Heat stress hospitalizations due to heat-related illnesses, such as heat stroke and heat exhaustion, represent part of the public health burden of hot weather. Data aggregated over five years provides enough stability to display neighborhood impacts.
-</p>
+                <h2 class="fs-xl" data-pagefind-ignore="all">Heat stress: yearly hospitalizations <span class="font-weight-normal">(<span id="year-heat-hospitalizations">YEAR</span>)</span></h2>
+                <p>Heat stress hospitalizations weather are part of the public health burden due to hot weather.</p>
             </div>
 
             <script>
                 
-                getYear(`2015-12-31`,`year-heat-hospitalizations`)
+                getYear(`2016-12-31`,`year-heat-hospitalizations`)
             </script>
 
             <div class="modal-body">
@@ -699,36 +698,36 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><span class="text-primary fs-xl float-right">Fresh Meadows <span class="ml-2 float-right">0.0*</span></span></th>
+                        <th scope="row"><span class="text-primary fs-xl float-right">Fresh Meadows <span class="ml-2 float-right">0.5*</span></span></th>
 
                         <td>
                             <div id="n-heat-hospitalizations" style="width:90%;" class="compBar neighb">
                                 &nbsp;
-                                <span class="sr-only">0.0*</span>
+                                <span class="sr-only">0.5*</span>
                             </div>
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><span class="fs-xl float-right">Queens <span class="ml-2 float-right">0.5</span></span></th>
+                        <th scope="row"><span class="fs-xl float-right">Queens <span class="ml-2 float-right">1.2</span></span></th>
                         <td>
                             <div id="b-heat-hospitalizations" style="width:90%;" class="compBar nonNeighb">
                                 &nbsp;
-                                <span class="sr-only">0.5</span>
+                                <span class="sr-only">1.2</span>
                             </div>
                         </td>
                       </tr>
                       <tr>
-                        <th scope="row"><span class="fs-xl float-right">New York City <span class="ml-2 float-right">0.8</span></span></th>
+                        <th scope="row"><span class="fs-xl float-right">New York City <span class="ml-2 float-right">1.6</span></span></th>
                         <td>
                             <div id="c-heat-hospitalizations" style="width:90%;" class="compBar nonNeighb">
                                 &nbsp;
-                                <span class="sr-only">0.8</span>
+                                <span class="sr-only">1.6</span>
                             </div>
                         </td>
                       </tr>
                     </tbody>
                   </table><div class="data-note float-right">* Estimate is based on small numbers so should be interpreted with caution.</div><script>
-                    renderComparisonChart( 0 ,  0.5 ,  0.8 ,'n-heat-hospitalizations','b-heat-hospitalizations','c-heat-hospitalizations')
+                    renderComparisonChart( 0.5 ,  1.2 ,  1.6 ,'n-heat-hospitalizations','b-heat-hospitalizations','c-heat-hospitalizations')
                     
                 </script>
 
@@ -736,7 +735,7 @@
             <hr>
             <div class="modal-body">
                 <span class="home-label font-weight-bold">Comparison</span>
-                <p class="fs-lg">For heat stress: hospitalizations, <strong class="text-primary">Fresh Meadows</strong> is <span class="better">better</span> than most neighborhoods.</p>
+                <p class="fs-lg">For heat stress: yearly hospitalizations, <strong class="text-primary">Fresh Meadows</strong> is <span class="better">better</span> than most neighborhoods.</p>
                 <p class="fs-sm">  <em>Age-adjusted rate per 100,000</em></p>
                 <div style="width:100%; height:30vmin; z-index:10000;" id="summary-Heat540-1"></div>
 
