--- a/content/data-features/nyccas/embed/pollutant-trends.html
+++ b/content/data-features/nyccas/embed/pollutant-trends.html
@@ -163,7 +163,7 @@
         var chartSpec = {};
         function drawChart() {
             document.getElementById('polPrint').innerHTML = pollutantName
-            document.getElementById('sourcePrint').innerHTML = source
+            document.getElementById('sourcePrint').innerHTML = DOMPurify.sanitize(source)
             document.getElementById('unitPrint').innerHTML = units
             let width = document.getElementById('vis').offsetWidth / 2.25
 
