--- a/es/index.html
+++ b/es/index.html
@@ -37,11 +37,11 @@
 <title>Environment &amp; Health Data Portal</title>
 
 
-<meta name="build_datetime" content='jueves, 5 de septiembre de 2024, 12:45:09 EDT'>
+<meta name="build_datetime" content='jueves, 5 de septiembre de 2024, 12:50:48 EDT'>
 <meta name="build_environment" content='prod_prod'>
 <meta name="git_branch" content='production'>
-<meta name="git_last_hash" content='666e556a03'>
-<meta name="git_last_msg" content='Merge pull request #1118 from nychealth/hotfix-DE-chooser'>
+<meta name="git_last_hash" content='5aaec86374'>
+<meta name="git_last_msg" content='Merge pull request #1119 from nychealth:update-bump-pagefind-to-1.1.1'>
 
 
         <link rel="alternate" hreflang="en" href="/IndicatorPublic/" title="English">
